--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.5.2
+cloudinary==1.32.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.51.0
+django-cloudinary-storage==0.3.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2-binary==2.9.5
